# benchmark_dotproduct

./: Cargo.toml  DataViz.ipynb  README.md  data.csv
.ipynb_checkpoints/: DataViz-checkpoint.ipynb
benches/: bench.rs
src/: bin.rs  lib.rs
