[package]
name = "dotproduct"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rayon = "1.5.3"
#blas = "0.20"
#cblas = "0.4.0"
#intel-mkl-src = "0.8"
ndarray = "0.15.6"

[lib]
name = "dotproduct"
path = "src/lib.rs"

[[bin]]
name = "benchmark"
path = "src/bin.rs"
